Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13059

audiooutput example failing to play

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.1
    • 4.6.3
    • Multimedia
    • None
    • Symbian Series 60 5th edition, tested on N97 mini:
      -software version: v 12.0.110
    • 7eb0aea6, 98b335da, 4b0435b0

      -Seemes to get stuck when push mode enabled and suspend resume hit
      several times. However, continued normal operation when pull mode
      enabled.
      -To repeat, do the following:
      1. Start application
      2. Enable push mode
      3. Repeatedly press suspend and resume until no audio is heard and
      hitting suspend button doesn't do anything.
      4. Resumes normally if pull mode again enabled.

      Attached debug ends after step 4.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gastockw Gareth Stockwell
            aluomara Anssi Luomaranta
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes