Permit QAudioOutput::processedUSecs() to be called immediately after start()

If QAudioOutput::processedUSecs() is called very soon after
QAudioOutput::start(), the DevSound instance owned by the Symbian
backend may still be initializing.  This patch causes the function to
return zero, rather than failing an assertion.

Task-number: QTBUG-13059
Reviewed-by: Derick Hawcroft